--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -1,10 +1,36 @@
+{{!
+  This file is part of Moodle - http://moodle.org/
+
+  Moodle is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  Moodle is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
+}}
+{{!
+  @template mod_ubicast/mobile_view_page
+
+  This template renders the mobile page.
+
+  Example context (json):
+  {
+      "iframeurl": "url to launch ubicast content",
+  }
+}}
 {{=<% %>=}}
 <ion-content [fullscreen]="true">
-  <ion-row>
-    <ion-col>
-      <div class="video-container">
-        <iframe class="mediaserver-iframe" src="<% iframeurl %>" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-      </div>
-    </ion-col>
-  </ion-row>
+<ion-row>
+  <ion-col>
+    <div class="video-container">
+      <iframe class="mediaserver-iframe" src="<% iframeurl %>" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+    </div>
+  </ion-col>
+</ion-row>
 </ion-content>
