Fix some code format and syntax deprecations | #19

--- a/templates/mobile_view_page.mustache
+++ b/templates/mobile_view_page.mustache
@@ -22,7 +22,7 @@
     Example context (json):
     {
         "endpoint": "Direct url to ubicast resource",
-        "launch_activity_mobile": String for button label
+        "launch_activity_mobile": "String for button label"
     }
 }}
 {{=<% %>=}}
