--- a/css/style_app.css
+++ b/css/style_app.css
@@ -1,1 +1,4 @@
-#ubicast_endpoint { color: inherit; text-decoration: inherit; }
+#ubicast_endpoint {
+    color: inherit;
+    text-decoration: inherit;
+}
